--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,6 +21,20 @@ find_package(GMPXX REQUIRED)
 find_package(Threads REQUIRED)
 find_package(GTest REQUIRED)
 find_package(OpenMP)
+find_package(pybind11 REQUIRED)
+find_package(Boost REQUIRED COMPONENTS log locale)
+
+if(OPENMP_FOUND)
+    message(STATUS "OPENMP FOUND")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
+    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
+endif()
+
+if(Boost_FOUND)
+    message( STATUS "Boost_INCLUDE_DIRS = ${Boost_INCLUDE_DIRS}.")
+    message( STATUS "Boost_LIBRARIES = ${Boost_LIBRARIES}.")
+    message( STATUS "Boost_LIB_VERSION = ${Boost_LIB_VERSION}.")
+endif()
 
 # sync submodules
 include(UpdateSubmodules)
@@ -30,7 +44,10 @@ add_executable(experiment test/experiment.cpp)
 
 target_include_directories(experiment PUBLIC "${PROJECT_SOURCE_DIR}/include")
 target_include_directories(experiment PUBLIC "/usr/local/include/rest_rpc/include")
+target_include_directories(experiment PUBLIC "/usr/local/include/pybind11")
+target_include_directories(experiment PUBLIC "/usr/include/python3.10")
 target_include_directories(experiment PUBLIC ${GTEST_INCLUDE_DIRS})
+target_include_directories(experiment PUBLIC ${Boost_INCLUDE_DIRS})
 
 target_link_libraries(experiment
                       PRIVATE
@@ -39,11 +56,6 @@ target_link_libraries(experiment
                       ${LIBGMP_LIBRARIES}
                       ${LIBGMPXX_LIBRARIES}
                       Threads::Threads
-                      ${GTEST_BOTH_LIBRARIES})
-
-if(OPENMP_FOUND)
-message("OPENMP FOUND")
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
-set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
-endif()
+                      ${GTEST_BOTH_LIBRARIES}
+                      ${Boost_LIBRARIES}
+                      pybind11::embed)
