完成SIC、SVC协议、数据分块传送以及压缩标志位获取

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -76,5 +76,9 @@
         "typeinfo": "cpp",
         "variant": "cpp",
         "*.ipp": "cpp"
-    }
+    },
+    "editor.inlayHints.enabled": "off",
+    "C_Cpp.intelliSenseEngine": "Disabled",
+    "clangd.arguments": [ "--header-insertion=never" ],
+    "clangd.fallbackFlags": [ "-std=c++17" ]
 }
